--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <a class="elm">ありがとうございました！！</a>
 
   </div>
-
+  <a href="https://instagram.com/ponzutteoisiine?igshid=OGQ5ZDk2ZA==">Instagram</a>
 </body>
 
  
