--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
   <div class="container">
 
     <a class="elm">ありがとうございました！！</a>
-
+    <a href="https://instagram.com/ponzutteoisiine?igshid=OGQ5ZDk2ZA==">Instagram</a>
   </div>
-  <br><a href="https://instagram.com/ponzutteoisiine?igshid=OGQ5ZDk2ZA==">Instagram</a>
 </body>
 
  
