--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <div class="container">
 
     <a class="elm">ありがとうございました！！</a>
-    <a href="https://instagram.com/ponzutteoisiine?igshid=OGQ5ZDk2ZA==">Instagram</a>
+    
   </div>
 </body>
 
@@ -144,7 +144,7 @@
           <li><a href="https://www.youtube.com/user/ToyotaGlobalNewsJP">YouTube</a></li>
 
           <li><a href="https://www.instagram.com/toyota_jp/">Instagram</a></li>
-
+          <li><a href="https://instagram.com/ponzutteoisiine?igshid=OGQ5ZDk2ZA==">Instagram</a></li>
         </ul>
 
       </div>
